# mcp_polydial_com

./: .dockerignore  Dockerfile  README.md  docker-compose.yml
app/: create_env_file.py  main.py  pyproject.toml  restaurants_tools.py  utils.py
app/src/mcp_minimal/: server.py
app/src/mcp_polydial/: __init__.py
